tenzir/tests/exec/expr/escape/basic/incomplete_sequence.tql
// error

from {
  x: "\u11",
}
